@@ -5,6 +5,9 @@
 	* gkr/seahorse-gkr-source.c: Retrieve default key name and set 
 	default keyring flag on keyrings.
 	
+	* gkr/seahorse-gkr-keyring-commands.c: Add menu item to make keyring
+	default. 
+	
 2009-02-01  Stef Walter  <stef@memberwebs.com>
 
 	* gkr/seahorse-gkr-source.c: Don't show the session keyring.
